Add search icon

--- a/supplemental-ui/partials/header-content.hbs
+++ b/supplemental-ui/partials/header-content.hbs
@@ -7,8 +7,10 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <div class="navbar-item">
-          <input id="search-input" type="text" placeholder="Search docs" autofocus>
+        <div class="navbar-item search">
+            <button type="button" class="search">
+              <input id="search-input" class="searchbox" type="search" placeholder="Search docs" autofocus>
+            </button>
         </div>
         <a class="navbar-item" href="/notebook">Notebook</a>
         <div class="navbar-item has-dropdown is-hoverable">
