--- a/supplemental-ui/partials/head-meta.hbs
+++ b/supplemental-ui/partials/head-meta.hbs
@@ -1,2 +1,4 @@
-<link rel="stylesheet" href="{{uiRootPath}}/css/vendor/docsearch.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.0.0/themes/algolia-min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
+<link rel="stylesheet" href="{{uiRootPath}}/css/site-extra.css">
 <link rel="icon" href="{{uiRootPath}}/img/favicon.ico" type="image/x-icon">
