--- a/supplemental-ui/partials/footer-content.hbs
+++ b/supplemental-ui/partials/footer-content.hbs
@@ -4,6 +4,7 @@
      apiKey: '7341d7a3b8ad8253a8ef6bd0c082f7a5',
      indexName: 'pi3r',
      inputSelector: '#search-input',
+     autocompleteOptions: { hint: false, keyboardShortcuts: ['s'] },
      debug: false // Set debug to true if you want to inspect the dropdown
  });
 </script>
