--- a/supplemental-ui/partials/header-content.hbs
+++ b/supplemental-ui/partials/header-content.hbs
@@ -1,16 +1,19 @@
-<header class="header">
+<header class="header" role="banner">
   <nav class="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{or site.url (or siteRootUrl siteRootPath)}}">
-        <div class="navbar-item" >{{site.title}}</div>
+        <img src="{{uiRootPath}}/img/logo.png" alt="logo">
+      </a>
+      <a class="navbar-item" href="{{or site.url (or siteRootUrl siteRootPath)}}">
+          <div class="navbar-item" >{{site.title}}</div>
       </a>
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
         <div class="navbar-item search">
             <button type="button" class="search">
-              <input id="search-input" class="searchbox" type="search" placeholder="Search docs" autofocus>
             </button>
+            <input id="search-input" class="searchbox" type="search" placeholder="Search docs" autofocus />
         </div>
         <a class="navbar-item" href="/notebook">Notebook</a>
         <div class="navbar-item has-dropdown is-hoverable">
