Fix algolia keys

--- a/supplemental-ui/partials/footer-content.hbs
+++ b/supplemental-ui/partials/footer-content.hbs
@@ -1,8 +1,9 @@
 <!-- at the end of the BODY -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script type="text/javascript"> docsearch({
-     apiKey: '7341d7a3b8ad8253a8ef6bd0c082f7a5',
-     indexName: 'pi3r',
+     appId: 'QDHVLDHCUH',
+     apiKey: '1e23c2bd81f202e353569a29de2026a2',
+     indexName: 'pi3r-docs',
      inputSelector: '#search-input',
      autocompleteOptions: { hint: false, keyboardShortcuts: ['s'] },
      debug: false // Set debug to true if you want to inspect the dropdown
